--- a/app/index.css
+++ b/app/index.css
@@ -1,2 +1,15 @@
 @import 'https://slyd.netlify.com/bundle.css';
 
+.slide-no {
+  position: absolute;
+  top: 2rem;
+  left: 2rem;
+  display: inline-grid;
+  place-items: center;
+  width: 2em;
+  height: 2em;
+  font-size: 2.5vmax;
+  border-radius: 50%;
+  color: var(--text-color-2);
+  border: 1px solid var(--text-color-3);
+}
