--- a/app/index.css
+++ b/app/index.css
@@ -18,7 +18,7 @@ video {
   &:focus:not(:focus-visible) { 
     outline: none;
   }
-  
+
   &[fit-height] {
     height: 100%;
   }
@@ -30,4 +30,25 @@ video {
   grid-template-columns: 1fr max-content;
   grid-template-rows: 100vh;
   gap: 3vmax;
+}
+
+.icon {
+  fill: var(--text-color-2);
+  width: 3em;
+}
+
+[down-arrow] {
+  animation: float 2s ease-in-out infinite;
+  fill: var(--brand-color-3);
+  margin-bottom:  2.5vmax;
+  margin-left: 5em;
+}
+
+@keyframes float {
+  0%, 100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(.5rem);
+  }
 }
