--- a/app/index.css
+++ b/app/index.css
@@ -151,3 +151,14 @@ video {
   transform: none;
   margin-bottom: 2rem;
 }
+
+[rock-hand] {
+  display: inline-block;
+  animation: float 1s ease-in-out infinite;
+}
+
+@keyframes float {
+  50% {
+    transform: translateY(.5rem);
+  }
+}
