--- a/app/index.css
+++ b/app/index.css
@@ -23,6 +23,12 @@ slyd {
   color: hsl(calc(var(--hue) * 1.2) 50% 75%);
   background: hsla(calc(var(--hue) * 1.2), 50%, 75%, 20%);
   border: 1px solid var(--brand-color-3);
+  transition: transform .5s cubic-bezier(.13, .01, 0.1, 1);
+  transform: scale(0);
+}
+
+[active] .slide-no {
+  transform: scale(1);
 }
 
 video {
